--- a/week01/first-page.html
+++ b/week01/first-page.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Page</title>
 </head>
+
 <body>
     <h1>My First Page</h1>
-    <p>My favorite color is: </p>
+    <p>My favorite color is: black</p>
+    <p>Am learning Web development</p>
+    <p> </p>
 </body>
+
 </html>
