--- a/index.html
+++ b/index.html
@@ -4,15 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title>Jonatha Njenga/WDD 130</title>
 </head>
 
 <body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own
-        personal details.</p>
-
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+    <main>
+        <h1>Jonathan Njenga/WDD 130.</h1>
+        <img src="images/WIN_20241120_20_13_pro.jpg" alt="Hello am Jonathan This is my picture" width="200">
+        <p>Hello my name is Jonathan from Nairobi Kenya,am a student at BYU Idaho am happy to be a
+            student in this institution,am learning how to create a website.My favorite sport is soccer,once i fully
+            qualify
+            to be a software Egineer i will build my own website
+            am looking foward to complete my studies for better future moreso to help the community with my skills.</p>
+    </main>
+    <footer>
+        <p>@2025 Jonathan njenga Nairobi Kenya.</p>
+    </footer>
 </body>
 
 </html>
