--- a/index.html
+++ b/index.html
@@ -4,21 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jonatha Njenga/WDD 130</title>
+    <title>Jonatha Njenga/WDD 130/</title>
 </head>
 
 <body>
+    <header>
+        <nav>
+            <a href="#">home</a>
+            <a href="wwr/">Rafting Site</a>
+        </nav>
+    </header>
     <main>
-        <h1>Jonathan Njenga/WDD 130.</h1>
-        <img src="images/WIN_20241120_20_13_pro.jpg" alt="Hello am Jonathan This is my picture" width="200">
+        <h1>Jonathan Njenga/WDD 130/</h1>
         <p>Hello my name is Jonathan from Nairobi Kenya,am a student at BYU Idaho am happy to be a
-            student in this institution,am learning how to create a website.My favorite sport is soccer,once i fully
-            qualify
-            to be a software Egineer i will build my own website
-            am looking foward to complete my studies for better future moreso to help the community with my skills.</p>
+            student in this institution,am learning how to create a website.My favorite sport is soccer,once
+            i fully qualify to be a software Egineer i will build my own website
+            am looking foward to complete my studies for a better my future moreso to help the community with my
+            skills</p>
+        <img src="wdd130/week01/images/WIN_20241120_20_13_28_pro.jpg" alt="Hello am Jonathan This is my picture"
+            width="200">
+
     </main>
     <footer>
-        <p>@2025 Jonathan njenga Nairobi Kenya.</p>
+        <p>@2025 😍 Jonathan njenga 😍 Nairobi Kenya.</p>
     </footer>
 </body>
 
