--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
     </header>
     <main>
         <h1>Jonathan Njenga/WDD 130/</h1>
+        <img src="week01/images/me.jpg" alt="Hello am Jonathan" width="200">
         <p>Hello my name is Jonathan from Nairobi Kenya,am a student at BYU Idaho am happy to be a
             student in this institution,am learning how to create a website.My favorite sport is soccer,once
             i fully qualify to be a software Egineer i will build my own website
-            am looking foward to complete my studies for a better my future moreso to help the community with my
+            am looking foward to complete my studies for a better future,moreso to help the community with my
             skills</p>
-        <img src="wdd130/week01/images/WIN_20241120_20_13_28_pro.jpg" alt="Hello am Jonathan This is my picture"
-            width="200">
 
     </main>
     <footer>
