--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img src="week01/images/me.jpg" alt="Hello am Jonathan" width="200">
         <p>Hello my name is Jonathan from Nairobi Kenya,am a student at BYU Idaho am happy to be a
             student in this institution,am learning how to create a website.My favorite sport is soccer,once
-            i fully qualify to be a software Egineer i will build my own website
+            i fully qualify to be a software Engineer i will build my own website
             am looking foward to complete my studies for a better future,moreso to help the community with my
             skills</p>
 
