--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
         <h1>Jonathan Njenga/WDD 130/</h1>
         <img src="week01/images/me.jpg" alt="Hello am Jonathan" width="200">
         <p>Hello my name is Jonathan from Nairobi Kenya,am a student at BYU Idaho am happy to be a
-            student in this institution,am learning how to create a website.My favorite sport is soccer,once
-            i fully qualify to be a software Engineer i will build my own website
-            am looking foward to complete my studies for a better future,moreso to help the community with my
+            student in this institution,am learning how to create a website.</p>
+        <p>My favorite sport is soccer,once
+            i fully qualify to be a software Engineer i will build my own website.</p>
+        <P>Am looking foward to complete my studies for a better future,moreso to help the community with my
             skills</p>
 
     </main>
