add all changes

--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -10,7 +10,24 @@
 </head>
 
 <body>
+    <header>
+        <img=images"basic-logo.png" alt="Attribute to a short description of the image" width="128" height="128">
+    </header>
+    <nav>
+        <ul></ul>
+        <li></li>
+        <a></a>
+    </nav>
+    <main>
+        <h1>"Basic HTML structure"</h1>
+        <h2>"Heading</h2>
+        <p>What a heading</p>
+    </main>
+    <aside>
+        <img=imageshttps: //www.churchofjesuschrist.org/temples/photo-gallery alt="This is the Temple" width="200">
+    </aside>
 
+    <footer>Copy Right @2025 Content="Jonathan Njenga"</footer>
 </body>
 
 </html>
