--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <img src=images"basic-logo.png" alt="Attribute to a short description of the image" width="128" height="128">
+        <img src="images/basic-logo.png" alt="Attribute to a short description of the image" width="128" height="128">
     </header>
     <nav>
         <ul></ul>
@@ -24,7 +24,7 @@
         <p>What a heading</p>
     </main>
     <aside>
-        <img src=imageshttps: //www.churchofjesuschrist.org/temples/photo-gallery alt="This is the Temple" width="200">
+        <img src=images/https://www.churchofjesuschrist.org/temples/photo-gallery alt="This is the Temple" width="200">
     </aside>
 
     <footer>Copy Right @2025 Content="Jonathan Njenga"</footer>
