--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -24,7 +24,8 @@
         <p>What a heading</p>
     </main>
     <aside>
-        <img src=images/https://www.churchofjesuschrist.org/temples/photo-gallery alt="This is the Temple" width="200">
+        <img src="images/https://www.churchofjesuschrist.org/temples/photo-gallery" alt="This is the Temple"
+            width="200">
     </aside>
 
     <footer>Copy Right @2025 Content="Jonathan Njenga"</footer>
