--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -28,7 +28,7 @@
             width="200">
     </aside>
 
-    <footer>Copy Right @2025 Content="Jonathan Njenga"</footer>
+    <footer>Copy Right @2025 "Jonathan Njenga"</footer>
 </body>
 
 </html>
