add all changes

--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -14,13 +14,19 @@
         <img src="images/basic-logo.png" alt="Attribute to a short description of the image" width="128" height="128">
     </header>
     <nav>
-        <ul></ul>
-        <li></li>
-        <a></a>
+        <ul>
+            <li><a href="htpps://byui.edu">BYU-Idaho</a></li>
+            <li><a href="htpps://thechurchofjesuschrist.org">The Church</a></li>
+        </ul>
+
     </nav>
     <main>
-        <h1>"Basic HTML structure"</h1>
-        <h2>"Heading</h2>
+        <h1>" Basic HTML structure"</h1>
+        <section>
+            <h2>"Heading</h2>
+            <p>lorem,ipsum dolor sit amet consectetur adipicing elit</p>
+
+        </section>
         <p>What a heading</p>
     </main>
     <aside>
