--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -24,7 +24,7 @@
         <h1>" Basic HTML structure"</h1>
         <section>
             <h2>"Heading</h2>
-            <p>lorem,ipsum dolor sit amet consectetur adipicing elit</p>
+            <p>lorem,ipsum dolor sit amet consectetur adipicing elit molestiae tenetur </p>
 
         </section>
         <p>What a heading</p>
