add the changes

--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -30,8 +30,8 @@
         <p>What a heading</p>
     </main>
     <aside>
-        <img src="images/https://www.churchofjesuschrist.org/temples/photo-gallery" alt="This is the Temple"
-            width="200">
+        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/aba-nigeria/800x500/aba-nigeria-temple-lds-273999-wallpaper.jpg"
+            alt="This is the Temple" width="200">
     </aside>
 
     <footer>Copy Right @2025 Jonathan Njenga</footer>
