--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -31,8 +31,8 @@
     </main>
     <aside>
         <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/aba-nigeria/800x500/aba-nigeria-temple-lds-273999-wallpaper.jpg"
-            alt="This is the temple">
-        alt="This is the Temple" width="200">
+            alt="This is the temple" width="200">
+
     </aside>
 
     <footer>Copy Right @2025 Jonathan Njenga</footer>
