--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jonatha Njenga/WDD 130/</title>
+    <title>Jonatha Njenga/wdd 130/</title>
 </head>
 
 <body>
@@ -15,7 +15,7 @@
         </nav>
     </header>
     <main>
-        <h1>Jonathan Njenga/WDD 130/</h1>
+        <h1>Jonathan Njenga/wdd 130/</h1>
         <img src="week01/images/me.jpg" alt="Hello am Jonathan" width="200">
         <p>Hello my name is Jonathan from Nairobi Kenya,am a student at BYU Idaho am happy to be a
             student in this institution,am learning how to create a website.</p>
