--- a/index.html
+++ b/index.html
@@ -5,14 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jonatha Njenga/wdd 130/</title>
+    <meta name="description"
+        content="Jonathan Njenga | wdd 130 course homepage. Personal introduction, projects, and learning journal.">
+    <meta name="author" content="Jonathan Njenga">
+
+    <link rel="stylesheet" href="blocks-vs-inline.css">
 </head>
 
 <body>
     <header>
+        <h1>Welcome to My Home Page</h1>
         <nav>
-            <a href="#">home</a>
+            <a href="#">Home</a>
             <a href="wwr/">Rafting Site</a>
         </nav>
+
+
     </header>
     <main>
         <h1>Jonathan Njenga/wdd 130/</h1>
@@ -25,6 +33,14 @@
             skills</p>
 
     </main>
+    <aside>
+        <h2>Kenya</h2>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8a/Angama_Mara_2018_086.jpg/1280px-Angama_Mara_2018_086.jpg"
+            alt="Kenya landscape" />
+        <p>Kenya is a country in East Africa known for its beautiful landscapes, wildlife safaris, and diverse cultures.
+        </p>
+    </aside>
+
     <footer>
         <p>@2025 😍 Jonathan njenga 😍 Nairobi Kenya.</p>
     </footer>
