--- a/week03/float.html
+++ b/week03/float.html
@@ -1,29 +1,115 @@
-<!DOCTYPE html>
-<html lang="en">
+using System; using System.
+Collections.Generic;
+using System.Linq;
+public class Reference
+{
+public string Book { get; private set; }
+public int Chapter { get; private set; }
+public int VerseStart { get; private set; }
+public int? VerseEnd { get; private set; }
+}
+public Reference(string book, int chapter, int verse)
+{
+Book = book;
+Chapter = chapter;
+VerseStart = verse;
+VerseEnd = null;
+}
+{
+Book = book;
+Chapter = chapter;
+VerseStart = verseStart;
+VerseEnd = verseEnd;
+}
+public override string ToString()
+{
+if (VerseEnd == null)
+return $"{Book} {Chapter}:{VerseStart}";
+else
+return $"{Book} {Chapter}:{VerseStart}-{VerseEnd}";
+}
+public class Word
+{
+private string _text;
+private bool _isHidden;
+}
+public Word(string text)
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Float Property</title>
-    <link rel="stylesheet" href="styles/float.css">
-</head>
+{
+_text = text;
+_isHidden = false;
+}
+public void Hide()
+{
+_isHidden = true;
+}
+public bool IsHidden()
+{
+return _isHidden;
+}
+public string Display()
+{
+return _isHidden ? new string('_', _text.Length) : _text;
+}
+public class Scripture
+{
+private Reference _reference;
+private List<Word> _words;
+    public Scripture(Reference reference, string text)
+    {
 
-<body>
-    <main>
-        <h1>CSS Float Example; using float:right;</h1>
+    }
+    _reference = reference;
+    _words = text.Split(" ").Select(word => new Word(word)).ToList();
+    }
+    public void Display()
+    {
+    Console.WriteLine(_reference.ToString());
+    foreach (var word in _words)
+    }
+    { Console.Write(word.Display() + " ");
+    }
+    {
+    Console.WriteLine("\n"); }
+    public bool AllWordsHidden()
+    {
+    return _words.All(w => w.IsHidden());
+    }
+    public void HideRandomWords(int count)
+    {
+    Random rand = new Random();
+    int hidden = 0;
+    }
+    List<Word> visibleWords = _words.Where(w => !w.IsHidden()).ToList();
+        while (hidden < count && visibleWords.Count> 0)
+            {
 
-        <div class="col1">
-            <img src="http://dummyimage.com/200x300/333/fff/" alt="placeholder image" width="200" height="300">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil dolorum repudiandae commodi architecto
-                non! Quam sunt dolorem autem rerum culpa nam dicta cum, minima asperiores totam ea esse ut molestiae.
-                Nostrum eaexcepturi. Mollitia ex quis totam.</p>
+            int index = rand.Next(visibleWords.Count);
+            visibleWords[index].Hide();
+            visibleWords.RemoveAt(index); hidden++;
+            }
+            class Program
+            {
+            static void Main(string[] args)
 
-        </div>
-        <footer>©️ Footer stuff ... Lorem ipsum <br><em>Note that this footer element is in line with the floated
-                image</em>.
-        </footer>
-
-    </main>
-</body>
-
-</html>
+            }
+            Reference reference = new Reference("Proverbs", 3, 5, 6);
+            string text = "Trust in the Lord with all thine heart and lean
+            not unto thine own understanding.";
+            Scripture scripture = new Scripture(reference, text);
+            }
+            while true
+            {
+            Console.Clear();
+            scripture.Display();
+            }
+            if (scripture.AllWordsHidden())
+            {
+            Console.WriteLine("All words are hidden. Program ending...");
+            break;
+            }
+            Console.WriteLine("Press Enter to continue or type 'quit' to exit.");
+            string input = Console.ReadLine();
+            if (input.ToLower() == "quit")
+            break;
+            scripture.HideRandomWords(3);
