--- a/week04/layout-exercises.html
+++ b/week04/layout-exercises.html
@@ -60,7 +60,7 @@
             </section>
     </main>
     <footer>
-        <p>© 2025 Whitewater Rafting Adventures | Designed by Your Name</p>
+        <p>© 2025 Whitewater Rafting Adventures | Jonathan njenga</p>
         <div class="social">
             <a href="#"><img src="images/facebook-icon.png" alt="Facebook"></a>
             <a href="#"><img src="images/twitter-icon.png" alt="Twitter"></a>
