--- a/week04/layout-exercises.html
+++ b/week04/layout-exercises.html
@@ -11,9 +11,10 @@
 <body>
     <header>
         <img src="images/logo.png" alt="Rafting Adventures Logo">
-        <display:grid>
-            grid-row:1/5;
-        </display:grid>
+        <div>
+            display:grid;
+            <grid-template-row;300px;>
+        </div>
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html" class="active">About Us</a>
