--- a/week04/layout-exercises.html
+++ b/week04/layout-exercises.html
@@ -54,7 +54,9 @@
                     <figure> <img src="images/los-dientes.jpg" alt="Los Dientes del Diablo">
                         <figcaption>Los Dientes del Diablo</figcaption>
                     </figure>
-                    <figure> <img src="images/big-mallard.jpg" alt="Big Mallard">
+                    <figure> <img
+                            src="https://en.wikipedia.org/wiki/File:Aix-les-Bains_depuis_La_Chapelle-du-Mont-du-Chat_(juillet_2021).jpg"
+                            alt="Big Mallard">
                         <figcaption>Big Mallard</figcaption>
                     </figure>
                     <figure> <img src="images/half-day.jpg" alt="Half Day Adventure">
