--- a/week04/layout-exercises.html
+++ b/week04/layout-exercises.html
@@ -10,75 +10,58 @@
 
 <body>
     <header>
-        <img src="images/logo.png" alt="Rafting Adventures Logo">
-        <div>
-            display:grid;
-            <grid-template-row;300px;>
-
-                <background-color:#dcebf8:>
-                    <border:1px solid black;>
-                        <padding:20px>
-                            <font -size:30px:>
-                                <text-align:center;>
-        </div>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html" class="active">About Us</a>
-            <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact</a>
-        </nav>
-    </header>
-
-    <main>
-        <section class="hero">
-            <section class="hero">
-                <p>Adventure, excitement, and nature — all in one unforgettable experience.</p>
-            </section>
-
-            <section class="history">
-                <h2>Our History</h2>
-                <div class="history-layout"> <img src="images/history.jpg" alt="Rafting history image">
-                    <p>Whitewater Rafting Adventures was founded in 1998 by a team of outdoor enthusiasts who wanted to
-                        share their
-                        love of rivers and adventure. Over the years, we have expanded our trips, guiding thousands of
-                        rafters
-                        through some of the most scenic waterways in the world.</p>
-                    <p>Our mission is to offer safe, sustainable, and thrilling experiences while fostering a deep
-                        respect for
-                        nature and local communities.</p>
-                </div>
-            </section>
-            <section class="adventures">
-                <h2>Adventure Awaits You!</h2>
-                <div class="adventure-gallery">
-                    <figure> <img src="images/los-dientes.jpg" alt="Los Dientes del Diablo">
-                        <figcaption>Los Dientes del Diablo</figcaption>
-                    </figure>
-                    <figure> <img
-                            src="https://en.wikipedia.org/wiki/File:Aix-les-Bains_depuis_La_Chapelle-du-Mont-du-Chat_(juillet_2021).jpg"
-                            alt="Big Mallard">
-                        <figcaption>Big Mallard</figcaption>
-                    </figure>
-                    <figure> <img src="images/half-day.jpg" alt="Half Day Adventure">
-                        <figcaption>Half Day Adventure</figcaption>
-                    </figure>
-                    <figure> <img src="images/full-day.jpg" alt="Full Day Adventure">
-                        <figcaption>Full Day Adventure</figcaption>
-                    </figure>
-                    <figure> <img src="images/wild-rapid.jpg" alt="Wild Rapids">
-                        <figcaption>Wild Rapids</figcaption>
-                    </figure>
-                </div>
-            </section>
-    </main>
-    <footer>
-        <p>© 2025 Whitewater Rafting Adventures | Jonathan njenga</p>
-        <div class="social">
-            <a href="#"><img src="images/facebook-icon.png" alt="Facebook"></a>
-            <a href="#"><img src="images/twitter-icon.png" alt="Twitter"></a>
-            <a href="#"><img src="images/instagram-icon.png" alt="Instagram"></a>
-        </div>
-    </footer>
+        <img src="images/rafting-logo.png" alt="Rafting Adventures Logo">
+        ss="hero"> <h1>Adventure Awaits You!</h1>
+        <p>Experience unforgettable moments with The Rapids team.</p>
+        </section>
+        <section class="history">
+            <h2>Our History</h2>
+            <div class="history-layout">
+                <div>
+                    <p> The Rapids was founded on the day you were born — by your mind. Starting with just a handful of
+                        brain
+                        cells and a passion to dream. Our dreams grew, and we added many valuable members to our dream
+                        team.
+                        While personnel have moved to different teams over the years, our spirit has always remained
+                        strong.
+                    </p>
+                    <p> Today, The Rapids stands as a leading provider of at-home white water rafting experiences. Just
+                        lean
+                        back, close your eyes, and let our team take you down the river. </p>
+                </div> <img src="images/moon-girl.jpg" alt="A girl sitting on the moon in the water">
+            </div>
+            <p style="text-align:center; font-size:0.9rem; margin-top:1rem;"> Image by ANDRI TEGAR MAHARDIKA from
+                Pixabay </p>
+        </section>
+        <section class="adventures">
+            <h2>Adventure Awaits You!</h2>
+            <div class="adventure-gallery">
+                <figure> <img src="images/rafting-celebration.jpg" alt="Our team celebrating in the rapids">
+                    <figcaption>Our team celebrating in the rapids</figcaption>
+                </figure>
+                <figure> <img src="images/calm-river.jpg" alt="Rafting down a calm river">
+                    <figcaption>A calm drift down the river</figcaption>
+                </figure>
+                <figure> <img src="images/over-rapids.jpg" alt="Rafting over the rapids">
+                    <figcaption>Riding over the rapids with ease</figcaption>
+                </figure>
+                <figure> <img src="images/oars-water.jpg" alt="Oars dipping into the water">
+                    <figcaption>Dipping oars in the water</figcaption>
+                </figure>
+                <figure> <img src="images/through-rapids.jpg" alt="Rafting through rapids">
+                    <figcaption>Going through the rapids</figcaption>
+                </figure>
+            </div>
+        </section>
+        <footer>
+            <p>©2025 | The Rapids | Jonathan Njenga</p>
+            <div>
+                <class="social">
+                    <a href="#"><img src="images/facebook-icon.png" alt="Facebook Icon"></a>
+                    <a href="#"><img src="images/linkedin-icon.png" alt="LinkedIn Icon"></a>
+                    <a href="#"><img src="images/instagram-icon.png" alt="Instagram Icon"></a>
+            </div>
+        </footer>
 </body>
 
 </html>
