--- a/week04/layout-exercises.html
+++ b/week04/layout-exercises.html
@@ -11,8 +11,9 @@
 <body>
     <header>
         <img src="images/rafting-logo.png" alt="Rafting Adventures Logo">
-        ss="hero"> <h1>Adventure Awaits You!</h1>
-        <p>Experience unforgettable moments with The Rapids team.</p>
+        ss="hero">
+        <h1>Adventure Awaits You!</h1>
+        <p>Experience unforgettable moments with Rafting Adventures.</p>
         </section>
         <section class="history">
             <h2>Our History</h2>
@@ -30,8 +31,8 @@
                         back, close your eyes, and let our team take you down the river. </p>
                 </div> <img src="images/moon-girl.jpg" alt="A girl sitting on the moon in the water">
             </div>
-            <p style="text-align:center; font-size:0.9rem; margin-top:1rem;"> Image by ANDRI TEGAR MAHARDIKA from
-                Pixabay </p>
+            <p style="text-align:center; font-size:0.9rem; margin-top:1rem;">
+            </p>
         </section>
         <section class="adventures">
             <h2>Adventure Awaits You!</h2>
@@ -57,7 +58,7 @@
             <p>©2025 | The Rapids | Jonathan Njenga</p>
             <div>
                 <class="social">
-                    <a href="#"><img src="images/facebook-icon.png" alt="Facebook Icon"></a>
+                    <a href="#"><img src="images/facebook-logo-png-image" alt="Facebook Icon"></a>
                     <a href="#"><img src="images/linkedin-icon.png" alt="LinkedIn Icon"></a>
                     <a href="#"><img src="images/instagram-icon.png" alt="Instagram Icon"></a>
             </div>
