--- a/week04/layout-exercises.html
+++ b/week04/layout-exercises.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <img src="images/rafting-logo.png" alt="Rafting Adventures Logo">
-        ss="hero">
+
         <h1>Adventure Awaits You!</h1>
         <p>Experience unforgettable moments with Rafting Adventures.</p>
         </section>
@@ -37,7 +37,8 @@
         <section class="adventures">
             <h2>Adventure Awaits You!</h2>
             <div class="adventure-gallery">
-                <figure> <img src="images/rafting-celebration.jpg" alt="Our team celebrating in the rapids">
+                <figure> <img src="images/https://en.wikipedia.org/wiki/File:Trisuli_Rafting_(6).JPG"
+                        alt="Our team celebrating in the rapids">
                     <figcaption>Our team celebrating in the rapids</figcaption>
                 </figure>
                 <figure> <img src="images/calm-river.jpg" alt="Rafting down a calm river">
@@ -55,7 +56,7 @@
             </div>
         </section>
         <footer>
-            <p>©2025 | The Rapids | Jonathan Njenga</p>
+            <p>©2025 | Rafting Adventure | Jonathan Njenga</p>
             <div>
                 <class="social">
                     <a href="#"><img src="images/facebook-logo-png-image" alt="Facebook Icon"></a>
