--- a/week04/layout-exercises.html
+++ b/week04/layout-exercises.html
@@ -37,8 +37,7 @@
         <section class="adventures">
             <h2>Adventure Awaits You!</h2>
             <div class="adventure-gallery">
-                <figure> <img src="images/https://en.wikipedia.org/wiki/File:Trisuli_Rafting_(6).JPG"
-                        alt="Our team celebrating in the rapids">
+                <figure> <img src="images/Trisuli_Rafting_(6).JPG" alt="Our team celebrating in the rapids">
                     <figcaption>Our team celebrating in the rapids</figcaption>
                 </figure>
                 <figure> <img src="images/calm-river.jpg" alt="Rafting down a calm river">
