--- a/week04/layout-exercises.html
+++ b/week04/layout-exercises.html
@@ -10,7 +10,8 @@
 
 <body>
     <header>
-        <img src="images/rafting-logo.png" alt="Rafting Adventures Logo">
+        <img src="images/https://en.wikipedia.org/wiki/File:Paramount_Pictures_Logo_2025.svgrafting-logo.png"
+            alt="Rafting Adventures Logo">
 
         <h1>Adventure Awaits You!</h1>
         <p>Experience unforgettable moments with Rafting Adventures.</p>
